# LLVMObfuscation

./: CMAKE_FIX_INSTRUCTIONS.md  CMakeLists.txt  Makefile  README.md  SETUP_SIH.md  SIH_DEMO_GUIDE.md  SIH_IMPLEMENTATION_SUMMARY.md  build.sh  build_sih.bat  build_sih.sh  demo  fix_cmake.bat  fix_cmake.ps1  fix_cmake.sh  obf_exec  obfuscated.ll  orig.ll  original  quick_setup.sh  quick_test.c  temp_bogus_1.ll  temp_is_0.ll  temp_is_1.ll  test4  test_1  test_demo  test_sih.sh  trial1
passes/: AdvancedBogusPass.cpp  CFFlattening.cpp  FunctionSplittingPass.cpp  InstructionSubstitutionPass.cpp  OpaquePredicatePass.cpp  PolymorphicStringPass.cpp
reports/: demo_result  demo_result.html  obfuscation_report.txt  obfuscation_report.txt.html
src/: ObfuscationReporter.cpp  ObfuscationReporter.h  SIHObfuscationReporter.cpp  SIHObfuscationReporter.h  main.cpp  main.cpp.original  main_enhanced.cpp  main_fixed.cpp
test/: complex.c  sih_demo.c  simple.c
